@@ -2,6 +2,7 @@ Alpha 6.1.7 - 5th September 2021
 
 - Fire extinguish designations spread with fire
 - Fire extinguish designation defaults job to top priority
+- Increased settler rotation speed to avoid getting stuck in circles
 
 Alpha 6.1.6 - 23rd August 2021
 
